// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package actor.person;

message RegisterPersonValue {
  string id = 1 [(akkaserverless.field).entity_key = true];
  string name = 2;
}

message FindPersonValue {
  string id = 1 [(akkaserverless.field).entity_key = true];
}

message PersonGetResponse {
  string id = 1;
  string name = 2;
}

service PersonService {
  option (akkaserverless.codegen) = {
    value_entity: {
      name: "actor.person.Person"
      entity_type: "person"
      state: "actor.person.domain.PersonState"
    }
  };

  rpc register(RegisterPersonValue) returns (google.protobuf.Empty);
  rpc find(FindPersonValue) returns (PersonGetResponse);
}
